GNOME Font Viewer - 43.beta
-------------------------------------------------------------------------------
Fonts 43.beta comes with a new "About" button in the main window and the
following translation updates:
 - Abkhazian
 - Georgian
 - Occitan (post 1500)

GNOME Font Viewer - 43.alpha
-------------------------------------------------------------------------------
Fonts 43.alpha comes with the following translation updates:
 - Dutch
 - Friulian
 - Georgian
 - Hebrew
 - Icelandic
 - Italian
 - Latvian
 - Nepali

GNOME Font Viewer - 42.0
-------------------------------------------------------------------------------
Fonts 42.0 comes with a port to GTK4 and the following translation updates:
 - Basque
 - Bulgarian
 - Catalan
 - Chinese (China)
 - Croatian
 - Czech
 - Finnish
 - French
 - Friulian
 - Galician
 - Icelandic
 - Indonesian
 - Korean
 - Lithuanian
 - Occitan (post 1500)
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Russian
 - Slovak
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian

GNOME Font Viewer - 42.rc
-------------------------------------------------------------------------------
Fonts 42.rc comes with the following translation updates:
 - Basque
 - Bulgarian
 - Catalan
 - Chinese (China)
 - Croatian
 - Czech
 - Finnish
 - French
 - Galician
 - Indonesian
 - Korean
 - Lithuanian
 - Occitan (post 1500)
 - Persian
 - Polish
 - Portuguese
 - Portuguese (Brazil)
 - Russian
 - Slovenian
 - Spanish
 - Swedish
 - Turkish
 - Ukrainian

GNOME Font Viewer - 42.beta
-------------------------------------------------------------------------------
Fonts 42.beta comes with a port to GTK4 by Evan Welsh,
and the following translation updates:
 - Chinese (China)
 - Czech
 - Occitan (post 1500)
 - Portuguese (Brazil)
 - Russian
 - Slovenian

GNOME Font Viewer - 42.alpha
-------------------------------------------------------------------------------
Fonts 42.alpha comes with the following translation updates:
 - Basque
 - Bulgarian
 - Croatian