@@ -1,3 +1,8 @@
+GNOME Font Viewer - 43.rc
+-------------------------------------------------------------------------------
+Fonts 43.rc comes with the following translation updates:
+ - Abkhazian
+
 GNOME Font Viewer - 43.beta
 -------------------------------------------------------------------------------
 Fonts 43.beta comes with a new "About" button in the main window and the
